--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-number-format": "^4.9.1",
+    "react-odometerjs": "^2.1.2",
     "react-parallax": "^3.5.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
