--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.3.4",
     "react-number-format": "^4.9.1",
     "react-odometerjs": "^2.1.2",
     "react-parallax": "^3.5.1",
