--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "react-number-format": "^4.9.1",
     "react-odometerjs": "^2.1.2",
     "react-parallax": "^3.5.1",
+    "react-pin-input": "^1.3.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-scroll-parallax": "^3.3.1",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^9.0.8",
     "reapop": "^4.0.5",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
