--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.6.0",
     "@mui/x-data-grid": "^5.8.0",
+    "@react-spring/parallax": "^9.5.5",
     "@reduxjs/toolkit": "^1.8.1",
     "@tailwindcss/forms": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -24,10 +25,15 @@
     "js-cookie": "^3.0.1",
     "moment": "^2.29.2",
     "postcss": "^8.4.8",
+    "query-string": "^7.1.1",
+    "ra-data-rest-client": "^1.1.1",
+    "ra-data-simple-rest": "^4.4.1",
     "react": "^17.0.2",
+    "react-admin": "^4.4.1",
     "react-chartjs-2": "^4.0.1",
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
+    "react-final-form-arrays": "^3.1.3",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^5.3.4",
     "react-number-format": "^4.9.1",
@@ -37,8 +43,8 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "react-scroll-parallax": "^3.3.1",
     "react-spinners": "^0.11.0",
+    "react-spring": "^9.5.5",
     "react-toastify": "^9.0.8",
     "reapop": "^4.0.5",
     "redux": "^4.1.2",
