--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "classnames": "^2.3.2",
     "gsap": "^3.9.1",
     "js-cookie": "^3.0.1",
+    "lottie-react": "^2.3.1",
     "moment": "^2.29.2",
     "postcss": "^8.4.8",
     "query-string": "^7.1.1",
