--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "js-cookie": "^3.0.1",
     "lottie-react": "^2.3.1",
     "moment": "^2.29.2",
+    "mongoose-paginate-v2": "^1.7.1",
     "postcss": "^8.4.8",
     "query-string": "^7.1.1",
     "ra-data-rest-client": "^1.1.1",
@@ -40,6 +41,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-number-format": "^4.9.1",
     "react-odometerjs": "^2.1.2",
+    "react-paginate": "^8.1.4",
     "react-parallax": "^3.5.1",
     "react-pin-input": "^1.3.0",
     "react-redux": "^7.2.8",
