--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-final-form-arrays": "^3.1.3",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^5.3.4",
+    "react-loading-skeleton": "^3.1.0",
     "react-number-format": "^4.9.1",
     "react-odometerjs": "^2.1.2",
     "react-paginate": "^8.1.4",
